--- a/src/Components/Counter/Counter.module.css
+++ b/src/Components/Counter/Counter.module.css
@@ -1,12 +1,12 @@
 .normal {
-    margin-top: 50px;
+    margin-top: 20px;
     color: #282c34;
     font-size: 50px;
     margin-bottom: 30px;
 }
 
 .error {
-    margin-top: 50px;
+    margin-top: 20px;
     color: crimson;
     font-size: 50px;
     margin-bottom: 30px;
@@ -22,49 +22,25 @@
 }
 
 .myButton {
-    box-shadow: 0px 0px 0px 2px #9fb4f2;
-    background:linear-gradient(to bottom, #7892c2 5%, #476e9e 100%);
-    background-color:#7892c2;
     border-radius:10px;
     border:1px solid #4e6096;
-    display:inline-block;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial;
     margin-bottom: 10px;
     font-size:20px;
     padding:12px 37px;
-    text-decoration:none;
-    text-shadow:0px 1px 0px #5c80db;
 }
-.myButton:hover {
-    background:linear-gradient(to bottom, #476e9e 5%, #7892c2 100%);
-    background-color:#476e9e;
-}
+
 .myButton:active {
     position:relative;
     top:1px;
 }
 
 .myButtonRes {
-    box-shadow: 0px 0px 0px 2px #d95e5e;
-    background:linear-gradient(to bottom, #7892c2 5%, #d95e5e 100%);
-    background-color:#d95e5e;
     border-radius:10px;
     border:1px solid #4e6096;
-    display:inline-block;
-    cursor:pointer;
-    color:#ffffff;
-    font-family:Arial;
+    margin-bottom: 10px;
     font-size:20px;
     padding:12px 37px;
-    text-decoration:none;
-    text-shadow:0px 1px 0px #5c80db;
-}
 
-.myButtonRes:hover {
-    background:linear-gradient(to bottom, #d95e5e 5%, #d95e5e 90%);
-    background-color:#d95e5e;
 }
 
 .myButtonRes:active {
