--- a/src/Components/Counter/Counter.module.css
+++ b/src/Components/Counter/Counter.module.css
@@ -1,25 +1,63 @@
-.normal {
+
+
+.buttons {
     margin-top: 20px;
+}
+
+.normal {
+    margin-top: 10px;
     color: #282c34;
     font-size: 50px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .error {
-    margin-top: 20px;
+    margin-top: 10px;
     color: crimson;
     font-size: 50px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
-.counter {
-    height: 250px;
-    width: 250px;
-    margin: 200px auto;
+.counterBlock {
+    display: flex;
+    background-color: gray;
+    height: 280px;
+    width: 550px;
+    margin: 100px auto;
     border-radius: 5px;
     border: 5px solid dodgerblue;
 
 }
+
+.counter {
+    display: flex;
+    flex-direction: column;
+    height: 250px;
+    width: 250px;
+    border-radius: 5px;
+    border: 5px solid dodgerblue;
+    margin: auto;
+}
+
+.settings {
+    height: 250px;
+    width: 250px;
+    border-radius: 5px;
+    border: 5px solid dodgerblue;
+    margin: auto;
+}
+
+.input {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    height: 40px;
+    width: 150px;
+    font-size: 50px;
+    background-color: gray;
+    border: 2px solid dodgerblue;
+    border-radius: 5px;
+}
+
 
 .myButton {
     border-radius:10px;
